// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Large screen testing renders with default props 1`] = `
<div
  class="MuiBox-root css-11u4k1p"
>
  <div />
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1o08uhv-MuiGrid2-root"
    data-testid="homePage-largeScreen-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-7 css-1dst0ak-MuiGrid2-root"
    >
      <div />
      <div
        class="MuiBox-root css-2n5o1x"
        data-testid="homePage-largeScreen-linksBox"
      >
        <div
          class="MuiBox-root css-u6v8er"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-65a2cr-MuiTypography-root"
          >
            Find me on
          </h6>
          <div
            class="MuiBox-root css-1xphuc8"
          >
            <a
              href="https://www.linkedin.com/in/kai-mumford-2990b8176/"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img0"
                      height="100px"
                      src="LinkedinIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
            <a
              href="https://github.com/kai119"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img1"
                      height="100px"
                      src="GithubIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
            <a
              href="mailto:kai.mumford@gmail.com?subject=Portfolio%20Enquiry"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img2"
                      height="100px"
                      src="EmailIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5 css-7xvv13-MuiGrid2-root"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Mobile screen testing renders with default props 1`] = `
<div
  class="MuiBox-root css-11u4k1p"
>
  <div />
  <div
    class="MuiBox-root css-i9gxme"
    data-testid="homePage-mobile-container"
  >
    <div
      class="MuiBox-root css-1pu7dr7"
      xs="12"
    >
      <div />
    </div>
    <div
      class="MuiBox-root css-nxwe1y"
      xs="12"
    >
      <div />
      <div
        class="MuiBox-root css-1e1okbw"
      >
        <div
          class="MuiBox-root css-u6v8er"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle3 css-jab4h0-MuiTypography-root"
          >
            Find me on
          </span>
          <div
            class="MuiBox-root css-1xphuc8"
          >
            <a
              href="https://www.linkedin.com/in/kai-mumford-2990b8176/"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img0"
                      height="100px"
                      src="LinkedinIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
            <a
              href="https://github.com/kai119"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img1"
                      height="100px"
                      src="GithubIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
            <a
              href="mailto:kai.mumford@gmail.com?subject=Portfolio%20Enquiry"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img2"
                      height="100px"
                      src="EmailIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Small desktop screen testing renders with default props 1`] = `
<div
  class="MuiBox-root css-11u4k1p"
>
  <div />
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1o08uhv-MuiGrid2-root"
    data-testid="homePage-largeScreen-container"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-7 css-1dst0ak-MuiGrid2-root"
    >
      <div />
      <div
        class="MuiBox-root css-1fl86pi"
        data-testid="homePage-largeScreen-linksBox"
      >
        <div
          class="MuiBox-root css-u6v8er"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-65a2cr-MuiTypography-root"
          >
            Find me on
          </h6>
          <div
            class="MuiBox-root css-1xphuc8"
          >
            <a
              href="https://www.linkedin.com/in/kai-mumford-2990b8176/"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img0"
                      height="100px"
                      src="LinkedinIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
            <a
              href="https://github.com/kai119"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img1"
                      height="100px"
                      src="GithubIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
            <a
              href="mailto:kai.mumford@gmail.com?subject=Portfolio%20Enquiry"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1qr7kfj-MuiPaper-root-MuiCard-root"
              >
                <button
                  class="MuiButtonBase-root MuiCardActionArea-root css-3btb3-MuiButtonBase-root-MuiCardActionArea-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-228qhf-MuiIcon-root"
                  >
                    <img
                      alt="Social media icon"
                      data-testid="icon-img2"
                      height="100px"
                      src="EmailIcon.svg"
                      width="100px"
                    />
                  </span>
                  <span
                    class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
                  />
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5 css-7xvv13-MuiGrid2-root"
    >
      <div />
    </div>
  </div>
</div>
`;
